--- a/src/style/App.css
+++ b/src/style/App.css
@@ -207,3 +207,25 @@ body{
     justify-content: center;
     gap: 20px;
 }
+
+
+
+.conte{
+    display: flex;
+    gap: 10px;
+}
+
+.my-button p{
+   visibility: hidden;
+    background-color: #6E767D;
+}
+
+.my-button:hover p{
+    visibility: visible;
+    color: white;
+    
+}
+
+.my-button:hover{
+    color: #2881c5;
+}
