--- a/src/style/App.css
+++ b/src/style/App.css
@@ -553,8 +553,8 @@ body{
     color: white;
 }
 
-.user-navigation a:hover{
+a:hover{
     color:blue;
-    border-bottom: #D9D9D9;
+    text-decoration: underline;
 }
 
